Fix overview page layout on mobile

--- a/web/src/sass/common.scss
+++ b/web/src/sass/common.scss
@@ -827,6 +827,19 @@ button {
 
 /* overview page */
 .page-overview {
+    .table-flex {
+        .active {
+            .month {
+                background: $color_green;
+                color: white;
+            }
+        }
+        .future {
+            .month {
+                background: $color_amber;
+            }
+        }
+    }
     .month {
         text-align: right;
     }
