--- a/web/src/sass/large.scss
+++ b/web/src/sass/large.scss
@@ -168,11 +168,6 @@
             font-size: 16px;
             height: 24px;
             line-height: 24px;
-            .month {
-                background: $color_green;
-                font-weight: bold;
-                color: white;
-            }
             .editable-input {
                 height: 23px;
             }
@@ -181,9 +176,6 @@
             font-size: 15px;
             height: 20px;
             line-height: 20px;
-            .month {
-                background: $color_amber;
-            }
             .editable-input {
                 height: 20px;
             }
