--- a/web/src/sass/mobile.scss
+++ b/web/src/sass/mobile.scss
@@ -79,16 +79,60 @@
 }
 
 .page-overview {
-    .stocks, .bills, .food, .general, .holiday, .social {
+    .stocks, .bills, .food, .general, .holiday, .social,
+    .net, .predicted {
         display: none;
     }
-    .table-overview {
-        display: flex;
-        tr {
-            display: flex;
+    .table-flex {
+        width: 100%;
+        .header {
+            .col .text {
+                text-align: center;
+                height: 20px;
+                line-height: 20px;
+            }
+            .month {
+                background: $color_mob_overview_tbl_month;
+            }
+            .income {
+                background: $color_mob_overview_tbl_income;
+            }
+            .out {
+                background: $color_mob_overview_tbl_out;
+            }
+            .balance {
+                background: $color_mob_overview_tbl_balance;
+            }
         }
-        th, td {
-            flex: 1 0 0;
+        .row {
+            &:nth-child(n+2):nth-child(-n+20) {
+                // hide older items on small screens
+                display: none;
+            }
+        }
+        .col {
+            .text, .editable {
+                padding: 4px 10px;
+                display: inline-block;
+                width: 100%;
+                vertical-align: middle;
+                text-align: left;
+                height: 32px;
+                line-height: 32px;
+            }
+        }
+        .past {
+            font-style: italic;
+            color: #666;
+
+            .month {
+                background: #eee;
+            }
+        }
+        .active {
+            font-weight: bold;
+        }
+        .future {
         }
     }
 }
